--- a/drone-webdriver/pom.xml
+++ b/drone-webdriver/pom.xml
@@ -27,6 +27,7 @@
   <properties>
     <!-- m2e settings -->
     <m2e.jpa.activation>false</m2e.jpa.activation>
+    <google.code.gson.version>2.8.8</google.code.gson.version>
   </properties>
 
   <!-- Dependencies -->
@@ -162,6 +163,12 @@
       <artifactId>mockito-core</artifactId>
       <scope>test</scope>
       <version>${version.mockito}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>${google.code.gson.version}</version>
     </dependency>
 
     <dependency>
