--- a/pom.xml
+++ b/pom.xml
@@ -37,8 +37,9 @@
   <properties>
     <!-- Versioning -->
     <version.arquillian.core>1.6.0.Final</version.arquillian.core>
-    <version.selenium>3.11.0</version.selenium>
-    <version.htmlunit.driver>2.28</version.htmlunit.driver>
+    <version.selenium>4.0.0-rc-2</version.selenium>
+    <version.selenium.server>4.0.0-alpha-2</version.selenium.server>
+    <version.htmlunit.driver>2.53.0</version.htmlunit.driver>
     <phantomjs.driver.version>1.4.4</phantomjs.driver.version>
     <version.appium.java.client>5.0.0-BETA9</version.appium.java.client>
 
@@ -52,7 +53,7 @@
     <version.arquillian.spacelift>1.0.2</version.arquillian.spacelift>
 
     <!-- To avoid collisions with Jetty version we are using the same as packaged in Selenium Server -->
-    <version.org.eclipse.jetty>9.4.7.v20170914</version.org.eclipse.jetty>
+    <version.org.eclipse.jetty>9.4.43.v20210629</version.org.eclipse.jetty>
     <version.arquillian.jetty>1.0.0.CR3</version.arquillian.jetty>
 
     <!-- override from parent -->
