--- a/drone-api/pom.xml
+++ b/drone-api/pom.xml
@@ -3,9 +3,9 @@
 
   <!-- Parent -->
   <parent>
-    <groupId>org.jboss.arquillian.extension</groupId>
+    <groupId>org.mabartos.arquillian.extension</groupId>
     <artifactId>arquillian-drone-build</artifactId>
-    <version>2.5.3-SNAPSHOT</version>
+    <version>4.0.0-SNAPSHOT</version>
     <relativePath>../drone-build/pom.xml</relativePath>
   </parent>
 
