--- a/drone-build/pom.xml
+++ b/drone-build/pom.xml
@@ -3,9 +3,9 @@
 
   <!-- Parent -->
   <parent>
-    <groupId>org.jboss.arquillian.extension</groupId>
+    <groupId>org.mabartos.arquillian.extension</groupId>
     <artifactId>arquillian-drone-aggregator</artifactId>
-    <version>2.5.3-SNAPSHOT</version>
+    <version>4.0.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
@@ -49,7 +49,7 @@
         </configuration>
         <dependencies>
           <dependency>
-            <groupId>org.jboss.arquillian.extension</groupId>
+            <groupId>org.mabartos.arquillian.extension</groupId>
             <artifactId>arquillian-drone-build-config</artifactId>
             <version>${project.version}</version>
           </dependency>
