--- a/drone-impl/pom.xml
+++ b/drone-impl/pom.xml
@@ -3,9 +3,9 @@
 
   <!-- Parent -->
   <parent>
-    <groupId>org.jboss.arquillian.extension</groupId>
+    <groupId>org.mabartos.arquillian.extension</groupId>
     <artifactId>arquillian-drone-build</artifactId>
-    <version>2.5.3-SNAPSHOT</version>
+    <version>4.0.0-SNAPSHOT</version>
     <relativePath>../drone-build/pom.xml</relativePath>
   </parent>
 
@@ -29,17 +29,17 @@
   <!-- Dependencies -->
   <dependencies>
     <dependency>
-      <groupId>org.jboss.arquillian.extension</groupId>
+      <groupId>org.mabartos.arquillian.extension</groupId>
       <artifactId>arquillian-drone-api</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.jboss.arquillian.extension</groupId>
+      <groupId>org.mabartos.arquillian.extension</groupId>
       <artifactId>arquillian-drone-spi</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.jboss.arquillian.extension</groupId>
+      <groupId>org.mabartos.arquillian.extension</groupId>
       <artifactId>arquillian-drone-configuration</artifactId>
       <version>${project.version}</version>
     </dependency>
