--- a/extension/arquillian-drone-appium-extension/pom.xml
+++ b/extension/arquillian-drone-appium-extension/pom.xml
@@ -19,8 +19,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>arquillian-drone-build</artifactId>
-    <groupId>org.jboss.arquillian.extension</groupId>
-    <version>2.5.3-SNAPSHOT</version>
+    <groupId>org.mabartos.arquillian.extension</groupId>
+    <version>4.0.0-SNAPSHOT</version>
     <relativePath>../../drone-build/pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -30,12 +30,12 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.jboss.arquillian.extension</groupId>
+      <groupId>org.mabartos.arquillian.extension</groupId>
       <artifactId>arquillian-drone-webdriver</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.jboss.arquillian.extension</groupId>
+      <groupId>org.mabartos.arquillian.extension</groupId>
       <artifactId>arquillian-drone-impl</artifactId>
       <version>${project.version}</version>
     </dependency>
