--- a/extension/arquillian-drone-saucelabs-extension/pom.xml
+++ b/extension/arquillian-drone-saucelabs-extension/pom.xml
@@ -3,9 +3,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.jboss.arquillian.extension</groupId>
+    <groupId>org.mabartos.arquillian.extension</groupId>
     <artifactId>arquillian-drone-build</artifactId>
-    <version>2.5.3-SNAPSHOT</version>
+    <version>4.0.0-SNAPSHOT</version>
     <relativePath>../../drone-build/pom.xml</relativePath>
   </parent>
 
@@ -22,7 +22,7 @@
   <dependencies>
     <!-- Arquillian dependencies -->
     <dependency>
-      <groupId>org.jboss.arquillian.extension</groupId>
+      <groupId>org.mabartos.arquillian.extension</groupId>
       <artifactId>arquillian-drone-webdriver</artifactId>
       <version>${project.version}</version>
     </dependency>
@@ -62,7 +62,7 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.jboss.arquillian.extension</groupId>
+      <groupId>org.mabartos.arquillian.extension</groupId>
       <artifactId>arquillian-drone-webdriver-depchain</artifactId>
       <version>${project.version}</version>
       <type>pom</type>
