--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <!-- Artifact Configuration -->
-  <groupId>org.jboss.arquillian.extension</groupId>
+  <groupId>org.mabartos.arquillian.extension</groupId>
   <artifactId>arquillian-drone-aggregator</artifactId>
-  <version>2.5.3-SNAPSHOT</version>
+  <version>4.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Arquillian Drone Extension Agreggator</name>
   <description>Extension for functional testing based on web view layer (Ajocado, Selenium, WebDriver)</description>
