--- a/drone-build/pom.xml
+++ b/drone-build/pom.xml
@@ -222,7 +222,7 @@
       <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
         <artifactId>selenium-opera-driver</artifactId>
-        <version>${version.selenium}</version>
+        <version>${version.opera.driver}</version>
       </dependency>
 
       <!-- Selenium dependencies not present in the Selenium BOM file -->
